docs: migrate Soul Blazer wiki to standard Wiki folder structure
- Move 18 wikitext files from Games/SNES/Soul Blazer (SNES)/Wiki/ to Wiki/SNES/Soul_Blazer/
- Add TBL folder with text encoding tables (index.wikitext, English.wikitext)
- Create Images/ and Files/ folders for wiki assets
- Update all internal links to use [[/Subpage|Name]] format
- Add proper {{DISPLAYTITLE:Soul Blazer:PageName}} to all pages
- Create comprehensive index.wikitext with Infobox game template
- Add Data_Structures.wikitext with graphics, entity, and save formats
- Add Technical_Reference.wikitext with hardware specs and memory maps

--- a/Wiki/SNES/Soul_Blazer/Characters.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Characters.wikitext
@@ -1,4 +1,4 @@
-{{DISPLAYTITLE:Soul Blazer - Characters}}
+{{DISPLAYTITLE:Soul Blazer:Characters}}
 '''Soul Blazer''' features a cast of characters including the player hero, various NPCs, and souls released from monster lairs.
 
 == The Hero ==
@@ -249,145 +249,9 @@ The Hero can transform into animals in certain areas.
 | Sprite Bank || $16
 |}
 
-=== Angel Form ===
-{| class="wikitable"
-|-
-! Property !! Value
-|-
-| Location || St. Elle's clouds
-|-
-| Ability || Fly over gaps
-|-
-| Granted by || Angel soul
-|-
-| Sprite Bank || $16
-|}
-
-=== Mouse Form ===
-{| class="wikitable"
-|-
-! Property !! Value
-|-
-| Location || Model Town
-|-
-| Ability || Access small passages
-|-
-| Granted by || Mouse Family soul
-|-
-| Sprite Bank || $16
-|}
-
-=== Mermaid Form ===
-{| class="wikitable"
-|-
-! Property !! Value
-|-
-| Location || Seabed areas
-|-
-| Ability || Breathe underwater
-|-
-| Granted by || Mermaid's Tears item
-|-
-| Sprite Bank || $16
-|}
-
-== NPC Dialogue System ==
-
-=== Dialogue Pointer Table ===
-
-Located at $03:8000, each NPC has a pointer to their dialogue block:
-
-<pre>
-$03:8000: .dw NPC_00_Dialogue  ; Tool Shop Owner
-$03:8002: .dw NPC_01_Dialogue  ; Inn Keeper
-$03:8004: .dw NPC_02_Dialogue  ; Old Woman
-...
-</pre>
-
-=== Dialogue Flags ===
-
-NPC dialogue can change based on story progress. Flags at $7E1900-$7E191F track:
-* Whether NPC has been spoken to
-* Story event completion
-* Item/soul delivery status
-
-== Character Sprite Data ==
-
-=== Sprite Banks ===
-{| class="wikitable"
-|-
-! Bank !! Content
-|-
-| $15 || Player sprites (all forms)
-|-
-| $16 || NPC sprites, transformations
-|-
-| $17 || Town NPC sprites
-|-
-| $18 || Animal sprites
-|-
-| $19 || Special/boss NPC sprites
-|}
-
-=== Player Animation States ===
-{| class="wikitable"
-|-
-! State ID !! Animation !! Frames
-|-
-| $00 || Idle facing down || 2
-|-
-| $01 || Walk down || 4
-|-
-| $02 || Idle facing up || 2
-|-
-| $03 || Walk up || 4
-|-
-| $04 || Idle facing right || 2
-|-
-| $05 || Walk right || 4
-|-
-| $06 || Attack down || 3
-|-
-| $07 || Attack up || 3
-|-
-| $08 || Attack right || 3
-|-
-| $09 || Magic cast || 4
-|-
-| $0A || Damage || 2
-|-
-| $0B || Death || 4
-|}
-
-== Soul Counter ==
-
-Progress is tracked by souls released:
-
-{| class="wikitable"
-|-
-! Act !! Total Souls !! Requirement
-|-
-| Grass Valley || 12 || 10 to face boss
-|-
-| GreenWood || 18 || 15 to face boss
-|-
-| St. Elle's || 16 || 14 to face boss
-|-
-| Dr. Leo's Lab || 20 || 18 to face boss
-|-
-| Seabed Castle || 15 || 13 to face boss
-|-
-| World of Evil || 10 || All to face Deathtoll
-|-
-| '''Total''' || '''91''' || -
-|}
-
-== See Also ==
-
-* [[Soul Blazer - Progression|Progression]]
-* [[Soul Blazer - Enemies|Enemies]]
-* [[Soul Blazer - Items|Items]]
-* [[Soul Blazer - RAM map|RAM Map]]
+==See Also==
+* [[/Progression|Progression]]
+* [[/Bosses|Bosses]]
 
 [[Category:Soul Blazer]]
-[[Category:SNES]]
+[[Category:Characters]]
