--- a/Wiki/SNES/Soul_Blazer/Formulas.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Formulas.wikitext
@@ -1,4 +1,4 @@
-{{DISPLAYTITLE:Soul Blazer - Formulas}}
+{{DISPLAYTITLE:Soul Blazer:Formulas}}
 This page documents the '''game mechanics formulas''' in '''[[Soul Blazer]]''' (SNES).
 
 ==Overview==
@@ -201,155 +201,10 @@ With Lucky Blade:
 GEM_Amount = (Enemy_Base_GEMs × 1.5) + Random(0, 3)
 </pre>
 
-===Item Drops===
-Rare item drop chance:
-<pre>
-Drop_Chance = Base_Rate + (Luck_Bonus)
-
-Where:
-  Base_Rate = 5% (standard enemies)
-  Base_Rate = 10% (mini-bosses)
-  Base_Rate = 100% (bosses)
-  Luck_Bonus = +5% with Lucky Blade
-</pre>
-
-==Boss Health Formulas==
-
-===Standard Bosses===
-{| class="wikitable"
-! Boss !! HP !! Recommended Level
-|-
-| Metal Mantis || 100 || 8
-|-
-| Plantentacle || 150 || 14
-|-
-| Poseidon || 200 || 20
-|-
-| Stone Guardian || 180 || 25
-|-
-| Tin Doll || 250 || 30
-|-
-| Ghost Ship Captain || 200 || 28
-|-
-| Demon Bird || 300 || 35
-|-
-| Deathtoll (all phases) || 900 || 45
-|}
-
-===Deathtoll Phases===
-<pre>
-Phase 1: 300 HP - Floating head, projectile attacks
-Phase 2: 300 HP - Body revealed, melee attacks
-Phase 3: 300 HP - Full form, all attack patterns
-Total:   900 HP
-</pre>
-
-==Movement Formulas==
-
-===Walk Speed===
-<pre>
-Base_Speed = 2.0 pixels/frame
-With Light Armor: 2.5 pixels/frame
-
-Slowed (ice/sand): 1.0 pixels/frame
-Water (mermaid form): 3.0 pixels/frame
-</pre>
-
-===Attack Speed===
-<pre>
-Attack_Frames = 12 (0.2 seconds at 60 FPS)
-Recovery_Frames = 6
-Total_Attack_Cycle = 18 frames
-</pre>
-
-===Invincibility Frames===
-<pre>
-After taking damage: 60 frames (1 second)
-After using magic: 6 frames (0.1 seconds)
-</pre>
-
-==Healing Formulas==
-
-===HP Recovery===
-<pre>
-Medical Herb: +50 HP
-Strange Bottle: +100 HP
-Recovery Sword (per hit): +1 HP
-Dream Rod (Lisa): Full HP restore
-</pre>
-
-==Time Formulas==
-
-===In-Game Time===
-<pre>
-1 game minute = 60 real seconds
-1 game hour = 60 game minutes = 1 real hour
-Play time stored in save: Minutes (16-bit, max 65,535 = 1,092 hours)
-</pre>
-
-==Random Number Generator==
-
-Soul Blazer uses a 16-bit LFSR for pseudo-random values:
-<pre>
-Location: $7E0042 (2 bytes)
-Initial seed: $0001
-
-Update per call:
-  bit = (rng ^ (rng >> 1) ^ (rng >> 3) ^ (rng >> 12)) & 1
-  rng = (rng >> 1) | (bit << 15)
-
-Returns: rng & 0xFF (low byte)
-</pre>
-
-Used for:
-* Enemy behavior variations
-* Drop rate calculations
-* Critical hit checks
-* AI decision trees
-
-==Grinding Efficiency==
-
-===EXP per Minute===
-Approximate grinding rates by area:
-{| class="wikitable"
-! Area !! Best Enemy !! EXP/Kill !! Kills/Min !! EXP/Min
-|-
-| Underground Castle || Armor || 10 || 8 || 80
-|-
-| GreenWood || Crystal || 15 || 6 || 90
-|-
-| Seabed || Merman || 18 || 7 || 126
-|-
-| Mountain of Souls || Demon || 30 || 5 || 150
-|-
-| Leo's Laboratory || Metal Enemy || 35 || 6 || 210
-|-
-| World of Evil || Deathtoll Minion || 60 || 4 || 240
-|}
-
-===Optimal Level Ranges===
-{| class="wikitable"
-! Area !! Entry Level !! Exit Level
-|-
-| Grass Valley || 1 || 8
-|-
-| GreenWood || 8 || 15
-|-
-| St. Elles || 15 || 22
-|-
-| Mountain of Souls || 22 || 28
-|-
-| Leo's Laboratory || 28 || 36
-|-
-| Magridd Castle || 36 || 45+
-|}
-
 ==See Also==
-* [[Soul Blazer:Data tables|Data Tables]]
-* [[Soul Blazer:Enemies|Enemies]]
-* [[Soul Blazer:Items|Items]]
-* [[Soul Blazer:Technical Reference|Technical Reference]]
+* [[/Enemies|Enemies]]
+* [[/Items|Items]]
+* [[/Magic|Magic]]
 
 [[Category:Soul Blazer]]
-[[Category:Game Mechanics]]
 [[Category:Formulas]]
