--- a/Wiki/SNES/Soul_Blazer/Glitches.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Glitches.wikitext
@@ -1,4 +1,4 @@
-{{DISPLAYTITLE:Soul Blazer - Glitches}}
+{{DISPLAYTITLE:Soul Blazer:Glitches}}
 This page documents '''glitches, bugs, and exploits''' in '''[[Soul Blazer]]''' (SNES).
 
 ==Overview==
@@ -198,186 +198,9 @@ Occasionally, audio may loop incorrectly or become distorted.
 * Open and close menu
 * Reset game (if persistent)
 
-====Technical Cause====
-<pre>
-SPC700 channel state corruption
-Occurs when interrupting sample playback
-More common during heavy sprite load
-</pre>
-
-==Speedrun Techniques==
-
-===Optimal Route===
-Speedruns use several glitches for the current world record route:
-
-{| class="wikitable"
-! Act !! Technique !! Time Save
-|-
-| 1 || Damage boost past first door || 35s
-|-
-| 1 || Boss skip (partial lair clear) || 1:00
-|-
-| 2 || Early shrine access || 45s
-|-
-| 3 || Mermaid form skip || 1:30
-|-
-| 3 || Ghost Ship sequence break || 2:00
-|-
-| 4 || Ladder skip || 20s
-|-
-| 5 || Model Town wall clip || 1:15
-|-
-| 5 || Painting early entry || 45s
-|-
-| 6 || World of Evil skip || 2:30
-|}
-
-===RNG Manipulation===
-The random number generator can be manipulated for optimal drops and enemy behavior.
-
-====RNG Location====
-<pre>
-$7E0042-$7E0043 (16-bit LFSR)
-Updates every frame
-Seeded by frame count at game start
-</pre>
-
-====Manipulation Points====
-* Title screen wait time
-* Menu open/close timing
-* Frame of entering new area
-* Frame of attacking
-
-===Tool-Assisted Records===
-{| class="wikitable"
-! Category !! Time !! Player !! Date
-|-
-| Any% TAS || 58:32 || TASer1 || 2023
-|-
-| 100% TAS || 2:45:18 || TASer2 || 2022
-|-
-| RTA Any% || 1:12:45 || Runner1 || 2024
-|-
-| RTA 100% || 3:15:22 || Runner2 || 2023
-|}
-
-==Debug Mode==
-
-===Game Genie Codes===
-These codes enable debug features:
-
-{| class="wikitable"
-! Code !! Effect
-|-
-| AA2F-6769 || Enable debug menu (Start+Select)
-|-
-| DD3A-6709 || Level select mode
-|-
-| DF63-ADA4 || Infinite HP
-|-
-| DD6B-A464 || Infinite GEMs
-|-
-| DD2B-6769 || All items unlocked
-|-
-| DDA3-6769 || All magic unlocked
-|-
-| AA63-ADA4 || One-hit kills
-|-
-| DD3A-6FA9 || Walk through walls (always)
-|}
-
-===Debug Menu Contents===
-When enabled, the debug menu provides:
-* Area warp (any map)
-* Item give (any item)
-* Level set (1-50)
-* GEM set (0-65535)
-* Flag toggle (all game flags)
-* Music test
-* Sound test
-* Sprite viewer
-
-===RAM Addresses for Cheats===
-{| class="wikitable"
-! Address !! Size !! Description !! Valid Range
-|-
-| $7E1B00 || 2 || Current HP || 0-216
-|-
-| $7E1B02 || 2 || Max HP || 20-216
-|-
-| $7E1B04 || 4 || Experience || 0-999999
-|-
-| $7E1B08 || 1 || Level || 1-50
-|-
-| $7E1B20 || 2 || GEMs || 0-65535
-|-
-| $7E1B22 || 1 || Equipped Sword || 0-7
-|-
-| $7E1B23 || 1 || Equipped Armor || 0-7
-|-
-| $7E1B24 || 1 || Equipped Magic || 0-7
-|-
-| $7E1B28 || 1 || Sword inventory || bit flags
-|-
-| $7E1B29 || 1 || Armor inventory || bit flags
-|-
-| $7E1B2A || 1 || Magic inventory || bit flags
-|}
-
-==Regional Differences==
-
-===Version Comparison===
-{| class="wikitable"
-! Feature !! Japan !! USA !! Europe
-|-
-| Title || ソウルブレイダー || Soul Blazer || Soul Blazer
-|-
-| Difficulty || Standard || Standard || Slightly easier
-|-
-| GEM overflow || Present || Present || Present
-|-
-| Wall glitch || Present || Present || Fixed (partial)
-|-
-| Save corruption || Possible || Possible || Possible
-|}
-
-===Bug Fixes by Region===
-* European version fixed some wall collision issues
-* No version fixed GEM overflow
-* Japanese version has fastest text speed
-
-==Unused Content==
-
-===Unused Items===
-{| class="wikitable"
-! ID !! Internal Name !! Description
-|-
-| $3F || "Debug Ring" || Would show hitboxes
-|-
-| $40 || "Warp Stone" || Instant warp to Master
-|-
-| $41 || "Power Gem" || Permanent ATK boost
-|}
-
-===Unused Music Tracks===
-* Track $17: Alternate boss theme (never plays)
-* Track $18: Victory variant (unused)
-* Track $19: Silence (placeholder)
-
-===Unused NPCs===
-* Sprite ID $A0: Alternative Tulip design
-* Sprite ID $A1: Cut character (merchant?)
-* Sprite ID $A2: Debug NPC (invisible)
-
 ==See Also==
-* [[Soul Blazer:Secrets|Secrets]] - Hidden content and easter eggs
-* [[Soul Blazer:Technical Reference|Technical Reference]] - Memory and system details
-* [[Soul Blazer:Formulas|Formulas]] - Game mechanics
-
-==External Links==
-* [https://speedrun.com/soulblazer Speedrun.com leaderboards]
-* [https://tcrf.net/Soul_Blazer The Cutting Room Floor]
+* [[/Secrets|Secrets]]
+* [[/Technical Reference|Technical Reference]]
 
 [[Category:Soul Blazer]]
 [[Category:Glitches]]
-[[Category:Speedrunning]]
