--- a/Wiki/SNES/Soul_Blazer/Items.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Items.wikitext
@@ -198,203 +198,10 @@ Phoenix Special:
 * Medical Herbs sold in most town shops
 * Strange Bottles found in chests only
 
-==Key Items==
-Key items are required for game progression and cannot be sold or dropped.
-
-{| class="wikitable"
-! ID !! Item !! Purpose !! Location !! Required For
-|-
-| $10 || Dream Rod || Access dream world || The Master || All progression
-|-
-| $11 || Pass || Enter restricted areas || Various || Act transitions
-|-
-| $12 || Magic Bell || Summon aid || Leo's Lab || Leo's Lab boss
-|-
-| $13 || Mermaid's Tear || Breathe underwater || Mermaid Queen || St. Elles dungeons
-|-
-| $14 || Greenwood Leaf || Enter GreenWood || Turbo the Dog || Act 2 entry
-|-
-| $15 || Mushroom Shoes || Walk on clouds || Mushroom || Mountain of Souls
-|-
-| $16 || Leo's Brush || Bring paintings to life || Dr. Leo || Model Town completion
-|-
-| $17 || Super Bracelet || Double punch power || Nome || Mountain climbing
-|-
-| $18 || Master's Key || Unlock Magridd doors || King Magridd || Castle access
-|-
-| $19 || Platinum Card || VIP access || Queen Magridd || Castle treasury
-|-
-| $1A || Mobile Key || Activate machines || Dr. Leo || Lab machinery
-|-
-| $1B || Master's Sword || Defeat Deathtoll || The Master || Final boss only
-|}
-
-==Emblems==
-Emblems are collectible key items that prove completion of areas.
-
-{| class="wikitable"
-! ID !! Emblem !! Location !! Obtained From !! Door Unlocked
-|-
-| $20 || Emblem A || Underground Castle || Metal Mantis || GreenWood gate
-|-
-| $21 || Emblem B || GreenWood || Solid Arm || St. Elles gate
-|-
-| $22 || Emblem C || St. Elles || Great Carrot || Mountain gate
-|-
-| $23 || Emblem D || St. Elles || Poseidon || Alternate route
-|-
-| $24 || Emblem E || Mountain of Souls || Dragon || Leo's Lab gate
-|-
-| $25 || Emblem F || Leo's Lab || Tin Doll || Magridd gate
-|-
-| $26 || Emblem G || Magridd Castle || Demon Bird || World of Evil
-|-
-| $27 || Emblem H || World of Evil || Deathtoll || Game complete
-|}
-
-===Emblem Display===
-Emblems appear on the status screen in order collected.
-All 8 emblems required for true ending sequence.
-
-==GEMs==
-GEMs serve as both currency and magic points.
-
-===GEM Economy===
-{| class="wikitable"
-! Source !! Amount !! Notes
-|-
-| Weak enemies || 1-5 || Grass Valley, early areas
-|-
-| Medium enemies || 5-15 || Acts 2-4
-|-
-| Strong enemies || 15-50 || Acts 5-6
-|-
-| Bosses || 100-500 || One-time reward
-|-
-| Chests (small) || 50-100 || Common find
-|-
-| Chests (large) || 200-500 || Rare find
-|-
-| Metally enemies || 100+ || High reward, hard to kill
-|}
-
-===GEM Modifiers===
-* '''Lucky Blade''': +50% drops
-* '''GEM Doubler''' (hidden): ×2 all drops
-* '''Maximum GEMs''': 9,999,999
-
-===GEM Storage===
-<pre>
-$7E003A-$7E003D: 4-byte GEM counter (32-bit)
-Display format: Right-aligned, comma-separated
-Example: 1,234,567 GEMs
-</pre>
-
-==Equipment Data Structure==
-Each equipment entry is '''8 bytes''':
-
-{| class="wikitable"
-! Offset !! Size !! Description !! Values
-|-
-| $00 || 1 || Equipment ID || $00-$FF
-|-
-| $01 || 1 || Type || $00=Sword, $01=Armor, $02=Magic
-|-
-| $02 || 1 || Base stat value || Attack/Defense/Power
-|-
-| $03 || 1 || Special ability flags || See below
-|-
-| $04 || 1 || Elemental property || $00-$07
-|-
-| $05 || 1 || GEM cost (magic only) || 1-50
-|-
-| $06 || 2 || Name pointer || Points to $03 bank
-|}
-
-===Special Ability Flags===
-{| class="wikitable"
-! Bit !! Effect !! Used By
-|-
-| 0 || HP regeneration || Sword of Life, Mystic Armor
-|-
-| 1 || Critical hit bonus || Psycho Sword, Critical Sword
-|-
-| 2 || GEM drop bonus || Lucky Blade
-|-
-| 3 || Metal kill || Zantetsu Sword
-|-
-| 4 || Ghost damage || Spirit Sword
-|-
-| 5 || HP on kill || Recovery Sword
-|-
-| 6 || Speed bonus || Light Armor
-|-
-| 7 || Element resist || Ice/Magic/Elemental/Soul Armor
-|}
-
-===Elemental Properties===
-{| class="wikitable"
-! ID !! Element !! Color !! Notes
-|-
-| $00 || None || White || Neutral damage
-|-
-| $01 || Fire || Red || vs Ice enemies
-|-
-| $02 || Ice || Blue || vs Fire enemies
-|-
-| $03 || Electric || Yellow || vs Metal/Water
-|-
-| $04 || Wind || Green || vs Flying
-|-
-| $05 || Light || Gold || vs Dark/Ghost
-|-
-| $06 || Dark || Purple || vs Light
-|-
-| $07 || Holy || White/Gold || vs Evil
-|}
-
-==Shop Data==
-{| class="wikitable"
-! Shop !! Location !! Items Available !! Prices
-|-
-| Grass Valley || Tool Shop || Medical Herb || 20 GEMs
-|-
-| GreenWood || Forest Shop || Medical Herb, Antidote || 20, 30 GEMs
-|-
-| St. Elles || Underwater Shop || Medical Herb, Strange Bottle || 20, 100 GEMs
-|-
-| Mountain || Mountain Shop || Medical Herb, Antidote || 25, 35 GEMs
-|-
-| Leo's Lab || Lab Shop || All consumables || Standard prices
-|-
-| Magridd Town || Castle Shop || All consumables, Light Armor || Various
-|}
-
-==Data Locations==
-{| class="wikitable"
-! Data !! Bank !! Address !! Size
-|-
-| Sword data || $07 || $07:8000-$07:803F || 64 bytes (8 × 8)
-|-
-| Armor data || $07 || $07:8040-$07:807F || 64 bytes (8 × 8)
-|-
-| Magic data || $07 || $07:8080-$07:80BF || 64 bytes (8 × 8)
-|-
-| Key items || $07 || $07:80C0-$07:80FF || 64 bytes (8 × 8)
-|-
-| Item names || $03 || $03:8000-$03:83FF || 1024 bytes
-|-
-| Shop data || $07 || $07:8100-$07:81FF || 256 bytes
-|-
-| Emblem data || $07 || $07:8200-$07:823F || 64 bytes
-|}
-
 ==See Also==
-* [[Soul Blazer:Enemies|Enemies]] - Enemy drops and farming
-* [[Soul Blazer:Data tables|Data Tables]] - Complete item stats
-* [[Soul Blazer:ROM map|ROM Map]] - Data locations
-* [[Soul Blazer:Progression|Progression]] - Item acquisition order
+* [[/Magic|Magic]]
+* [[/Formulas|Formulas]]
+* [[/Data Tables|Data Tables]]
 
 [[Category:Soul Blazer]]
-[[Category:SNES Games]]
-[[Category:Item data]]
+[[Category:Items]]
