--- a/Wiki/SNES/Soul_Blazer/Magic.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Magic.wikitext
@@ -1,4 +1,4 @@
-{{DISPLAYTITLE:Soul Blazer - Magic}}
+{{DISPLAYTITLE:Soul Blazer:Magic}}
 '''Soul Blazer''' features a magic system where the player collects various soul magics throughout the game. Each magic type has unique properties, costs, and uses.
 
 == Overview ==
@@ -249,140 +249,9 @@ Each magic entry is 8 bytes:
 | $07 || Holy || All evil || -
 |}
 
-== Magic Damage Formula ==
-
-<pre>
-Base Damage = Magic Power + Spell Power
-Modified Damage = Base Damage × Element Modifier × Level Bonus
-
-Element Modifier:
-  Strong against: ×1.5
-  Normal: ×1.0
-  Weak against: ×0.5
-
-Level Bonus = 1.0 + (PlayerLevel × 0.02)
-
-Final Damage = Modified Damage - (Enemy Magic Defense / 2)
-</pre>
-
-== Magic Usage RAM ==
-
-{| class="wikitable"
-|-
-! Address !! Size !! Description
-|-
-| $7E0116 || 1 || Equipped magic ID
-|-
-| $7E0117 || 1 || Magic charge timer
-|-
-| $7E0118 || 1 || Active magic effects count
-|-
-| $7E0119 || 1 || Magic animation state
-|-
-| $7E011A-$7E011F || 6 || Active projectile slots
-|-
-| $7E0120-$7E012F || 16 || Projectile data (4 bytes each × 4 projectiles)
-|}
-
-== Projectile Data Structure ==
-
-Active magic projectiles use this format:
-
-{| class="wikitable"
-|-
-! Offset !! Size !! Field
-|-
-| $00 || 1 || Active flag
-|-
-| $01 || 1 || Magic type
-|-
-| $02 || 1 || X position (8.8 fixed point high)
-|-
-| $03 || 1 || Y position (8.8 fixed point high)
-|}
-
-== Magic Unlocks by Area ==
-
-{| class="wikitable"
-|-
-! Area !! Magic !! Soul Source
-|-
-| GreenWood || Soul Blade || Squirrel NPC
-|-
-| Underground Castle || Flame Ball || Fire spirit NPC
-|-
-| St. Elle's || Light Arrow || Angel NPC
-|-
-| Leo's Lab || Magic Flare || Scientist NPC
-|-
-| Seabed Castle || Rotator || Mermaid NPC
-|-
-| Model Town || Spark Bomb || Mouse NPC
-|-
-| World of Evil || Flame Pillar || Demon NPC
-|-
-| Deathtoll's Castle || Tornado || Hero soul (final dungeon)
-|}
-
-== Magic ROM Data ==
-
-{| class="wikitable"
-|-
-! Address !! Content
-|-
-| $07:8080-$07:80BF || Magic stat table (8 entries × 8 bytes)
-|-
-| $07:80C0-$07:80FF || Magic name pointers
-|-
-| $0D:9000-$0D:9FFF || Magic animation data
-|-
-| $19:8000-$19:BFFF || Magic sprite graphics
-|}
-
-== Magic Strategies ==
-
-=== Boss Fights ===
-{| class="wikitable"
-|-
-! Boss !! Recommended Magic !! Reason
-|-
-| Metal Mantis || Flame Ball || Fire weakness
-|-
-| Solid Arm || Light Arrow || Homing ignores movement
-|-
-| Demon Bird || Magic Flare || Hits during flight
-|-
-| Deathtoll || Flame Pillar/Tornado || High damage + safety
-|}
-
-=== GEM Efficiency ===
-{| class="wikitable"
-|-
-! Magic !! Cost !! Damage/GEM Ratio
-|-
-| Soul Blade || 2 || 6.0
-|-
-| Flame Ball || 4 || 4.5
-|-
-| Light Arrow || 3 || 5.0
-|-
-| Magic Flare || 8 || 3.1
-|-
-| Rotator || 5 || Variable (multi-hit)
-|-
-| Spark Bomb || 6 || 5.0
-|-
-| Flame Pillar || 10 || 3.5
-|-
-| Tornado || 12 || 1.7
-|}
-
-== See Also ==
-
-* [[Soul Blazer - Items|Items]]
-* [[Soul Blazer - Enemies|Enemies]]
-* [[Soul Blazer - RAM map|RAM Map]]
-* [[Soul Blazer - Data structures|Data Structures]]
+==See Also==
+* [[/Items|Items]]
+* [[/Formulas|Formulas]]
 
 [[Category:Soul Blazer]]
-[[Category:SNES]]
+[[Category:Magic]]
