--- a/Wiki/SNES/Soul_Blazer/Progression.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Progression.wikitext
@@ -198,211 +198,44 @@ Total Bosses: 8
 
 ===Progression===
 # Enter mountain via Nome village
-# Clear Laynole - Release mushrooms
-# Learn about sleeping grandparents
-# Navigate to Lune area
-# Solve mountain puzzles
-# Defeat '''Stone Guardian''' boss
-# Release grandparents
-# Receive '''Phoenix''' magic
+# Clear ice caves
+# Defeat Stone Guardian boss
 # Proceed to Leo's Laboratory
 
-===Boss: Stone Guardian===
-{| class="wikitable"
-! Stat !! Value
-|-
-| HP || 80
-|-
-| Attack || 22
-|-
-| Defense || 15
-|-
-| Pattern || Stone fists, creates barriers
-|-
-| Weakness || Phoenix magic
-|-
-| Reward || Phoenix spell
-|}
-
-===Key Items===
-* '''Phoenix''' - Powerful fire magic
-* '''Mountain Key''' - Opens sealed doors
-
-==Act 5: Leo's Laboratory==
+==Act 5: Dr. Leo's Laboratory==
 
 ===Areas===
 {| class="wikitable"
 ! Area !! Description !! Enemies
 |-
-| Model Town 1 || Toy-sized town || Toy Soldier, Toy Tank
+| Leo's Laboratory || Inventor's home || None
 |-
-| Model Town 2 || Second toy area || Cat, Mouse
+| Model Town || Miniature world || Toy enemies
 |-
-| Leo's Lab Basement || Laboratory || Various
-|-
-| Leo's Lab Attic || Upper laboratory || Various
-|-
-| Leo's Paintings || Painting worlds || Painting Monster
+| Power Plant || Electric area || Robot enemies
 |}
 
 ===Progression===
-# Enter model town
-# Shrink to toy size
-# Clear Model Town areas - Release toy creatures
-# Enter Leo's Laboratory
-# Explore the basement
-# Enter paintings (4 different worlds)
-# Clear each painting world
-# Defeat '''Tin Doll''' boss
-# Rescue Marie from imprisonment
-# Learn Dr. Leo's fate
-# Proceed to Magridd Castle
+# Meet Dr. Leo
+# Explore Model Town
+# Defeat Tin Doll boss
+# Proceed to World of Evil
 
-===Boss: Tin Doll===
-{| class="wikitable"
-! Stat !! Value
-|-
-| HP || 96
-|-
-| Attack || 26
-|-
-| Defense || 18
-|-
-| Pattern || Toy attacks, size manipulation
-|-
-| Weakness || Strike joints
-|-
-| Reward || Access to Magridd
-|}
+==Act 6: World of Evil==
 
-===Key Items===
-* '''Lucky Blade''' - Increased critical hits
-* '''Medical Herb''' - Full HP restoration
-
-==Act 6: Magridd Castle==
-
-===Areas===
-{| class="wikitable"
-! Area !! Description !! Enemies
-|-
-| Magridd Castle Town || Capital city || None (initially)
-|-
-| Magridd Castle || Royal castle || Dark Knight, Demon Wizard
-|-
-| Castle Basement || Dungeon area || Shadow, Dragon
-|-
-| World of Evil || Final area || Demon, Deathtoll's servants
-|-
-| Deathtoll's Lair || Final boss arena || Deathtoll
-|}
+The final act with the most challenging enemies and Deathtoll himself.
 
 ===Progression===
-# Enter Castle Town
-# Get audience with King Magridd
-# Learn about evil corruption
-# Enter castle dungeon
-# Clear basement areas - Release imprisoned souls
-# Defeat '''Demon Bird''' boss
-# Discover truth about King Magridd
-# Enter World of Evil
-# Navigate final gauntlet
-# Defeat '''Deathtoll''' (final boss)
-# Watch ending sequence
-# Credits roll
-
-===Boss: Demon Bird===
-{| class="wikitable"
-! Stat !! Value
-|-
-| HP || 112
-|-
-| Attack || 30
-|-
-| Defense || 20
-|-
-| Pattern || Aerial attacks, dive bombs
-|-
-| Weakness || Time attacks during landing
-|-
-| Reward || Access to World of Evil
-|}
-
-===Boss: Deathtoll (Final)===
-{| class="wikitable"
-! Stat !! Value
-|-
-| HP || 255
-|-
-| Attack || 40
-|-
-| Defense || 25
-|-
-| Pattern || Multiple forms, various attacks
-|-
-| Weakness || Strike the core
-|-
-| Reward || Game completion
-|}
-
-===Key Items===
-* '''Soul Armor''' - Maximum defense
-* '''Soul Blade''' - Maximum attack
-
-==Soul Lair Summary==
-
-{| class="wikitable sortable"
-! Act !! Area !! Estimated Lairs !! Primary Releases
-|-
-| 1 || Grass Valley || 20 || Villagers, buildings
-|-
-| 2 || GreenWood || 18 || Forest creatures, plants
-|-
-| 3 || St. Elles || 22 || Sea creatures, mermaids
-|-
-| 4 || Mountain of Souls || 18 || Mountain dwellers
-|-
-| 5 || Leo's Laboratory || 20 || Toy creatures
-|-
-| 6 || Magridd Castle || 22 || Castle inhabitants
-|}
-
-==Boss Summary==
-
-{| class="wikitable sortable"
-! # !! Boss !! Act !! Location !! HP
-|-
-| 1 || Metal Mantis || 1 || Underground Castle B4 || 32
-|-
-| 2 || Plantentacle || 2 || Lost Marsh || 48
-|-
-| 3 || Ghost Ship Captain || 3 || Ghost Ship || 40
-|-
-| 4 || Poseidon || 3 || Southerta || 64
-|-
-| 5 || Stone Guardian || 4 || Mountain of Souls || 80
-|-
-| 6 || Tin Doll || 5 || Leo's Lab || 96
-|-
-| 7 || Demon Bird || 6 || Magridd Castle || 112
-|-
-| 8 || Deathtoll || 6 || World of Evil || 255
-|}
-
-==Completion Requirements==
-
-To achieve 100% completion:
-* Clear all ~120 Soul Lairs
-* Defeat all 8 bosses
-* Release all NPCs and creatures
-* Collect all equipment
-* View ending
+# Navigate Demon Realm
+# Clear all soul lairs
+# Climb Final Tower
+# Defeat Deathtoll (3 phases)
+# Complete the game
 
 ==See Also==
-* [[Soul Blazer:ROM map|ROM Map]]
-* [[Soul Blazer:RAM map|RAM Map]]
-* [[Soul Blazer:Enemies|Enemies]]
-* [[Soul Blazer:Items|Items]]
-* [[Soul Blazer:Data tables|Data Tables]]
+* [[/Bosses|Bosses]]
+* [[/Maps|Maps]]
+* [[/Items|Items]]
 
 [[Category:Soul Blazer]]
-[[Category:Walkthroughs]]
+[[Category:Progression]]
